syntax = "proto3";
package bze.tokenfactory;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "bze/tokenfactory/params.proto";
import "bze/tokenfactory/denom_authority.proto";

option go_package = "github.com/bze-alphateam/bze/x/tokenfactory/types";

// GenesisState defines the tokenfactory module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
  repeated GenesisDenom factory_denoms = 2 [
    (gogoproto.moretags) = "yaml:\"factory_denoms\"",
    (gogoproto.nullable) = false
  ];
}

// GenesisDenom defines a tokenfactory denom that is defined within genesis
// state. The structure contains DenomAuthorityMetadata which defines the
// denom's admin.
message GenesisDenom {
  option (gogoproto.equal) = true;

  string denom = 1 [ (gogoproto.moretags) = "yaml:\"denom\"" ];
  DenomAuthority denom_authority = 2 [
    (gogoproto.moretags) = "yaml:\"denom_authority\"",
    (gogoproto.nullable) = false
  ];
}
